@@ -1,4 +1,9 @@
-2006-08-01  Roger Leigh  <rleigh@whinlatter.ukfsn.org>
+2006-08-01  Roger Leigh  <rleigh@debian.org>
+
+	* sbuild/sbuild-session.cc (run_child): Use the chroot
+	environment_filter when setting the chroot execution environment.
+
+2006-08-01  Roger Leigh  <rleigh@debian.org>
 
 	* test/sbuild-chroot.cc: Add environment_filter test.
 
